Working on Learning screen, lots of changes on several components

--- a/src/Components/LearningCard/LearningCard.scss
+++ b/src/Components/LearningCard/LearningCard.scss
@@ -9,6 +9,7 @@
   padding: 10px;
   height: 180px;
   margin: 5px 0;
+  cursor: pointer;
 
   .LearningCardPreview {
     width: 180px;
@@ -25,10 +26,18 @@
     padding-left: 20px;
   }
   .Title {
-    font-size: 2vw;
+    font-size: 3rem;
+    line-height: 3rem;
+    margin-bottom: 10px;
   }
   .Subtitle {
-    font-size: 1vw;
+    font-size: 1.5rem;
+  }
+  .Description {
+    font-size: 1rem;
+  }
+  .Author {
+    font-size: 1rem;
   }
 }
 
@@ -36,16 +45,16 @@
   @extend .LearningCard;
   border: 1px solid rgba(#3a3a3d, 1);
   background-image: linear-gradient(-45deg, #949494, #585858);
-  .Title, .Subtitle {
+  .Title, .Subtitle, .Description, .Author {
     text-shadow: 0 0 3px $dark1;
   }
 }
 
 .LearningCard-Theme_02 {
   @extend .LearningCard;
-  border: 1px solid rgba(#c3cfe2, 1);
+  border: 1px solid rgba(#969696, 1);
   background-image: linear-gradient(-45deg, #f5f7fa, #c3cfe2);
-  .Title, .Subtitle {
+  .Title, .Subtitle, .Description, .Author {
     text-shadow: 0 0 3px #c3cfe2;
     color: $dark0;
   }
@@ -55,7 +64,7 @@
   @extend .LearningCard;
   border: 1px solid rgba(#c3cfe2, 1);
   background-image: linear-gradient(-45deg, #8EC5FC, #E0C3FC);
-  .Title, .Subtitle {
+  .Title, .Subtitle, .Description, .Author {
     text-shadow: 0 0 3px #c3cfe2;
     color: $dark0;
   }
