--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -8,7 +8,7 @@
   background: linear-gradient(to right, #303031, #232324);
   box-shadow: 0px 5px 5px rgba($dark0, 0.2);
   padding-right: 2rem;
-  padding-left: 10rem;
+  padding-left: 6.25rem;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -21,6 +21,13 @@
     align-items: center;
     .EpicCMS {
       font-size: 3rem;
+      text-transform: none;
+      letter-spacing: normal;
+      color: $textPrimary;
+      height: min-content;
+      &:hover {
+        background: none;
+      }
     }
     .PSearchBar {
       margin-left: 7vw;
