--- a/src/Components/LearningCard/LearningCard.scss
+++ b/src/Components/LearningCard/LearningCard.scss
@@ -25,19 +25,33 @@
   .LearningCardTitles {
     padding-left: 20px;
   }
+
+  .Title, .Subtitle, .Description, .Author {
+    @extend .Text;
+  }
+
   .Title {
-    font-size: 3rem;
-    line-height: 3rem;
+    font-size: min(max(10px, 2vw), 2.3rem);
+    line-height: 1.5vw;
     margin-bottom: 10px;
+    font-weight: 800;
   }
+
   .Subtitle {
-    font-size: 1.5rem;
+    font-weight: 500;
+    padding-right: 10px;
+    font-size: 1.2vw;
+    line-height: 1.2vw;
   }
+
   .Description {
-    font-size: 1rem;
+    font-weight: 400;
+    font-size: 0.8vw;
   }
+
   .Author {
-    font-size: 1rem;
+    font-weight: 400;
+    font-size: 0.8vw;
   }
 }
 
@@ -64,8 +78,10 @@
   @extend .LearningCard;
   border: 1px solid rgba(#c3cfe2, 1);
   background-image: linear-gradient(-45deg, #8EC5FC, #E0C3FC);
-  .Title, .Subtitle, .Description, .Author {
-    text-shadow: 0 0 3px #c3cfe2;
-    color: $dark0;
+  .Title, .Description {
+    color: #383538;
+  }
+  .Subtitle, .Author {
+    color: #4d4e4e;
   }
 }
