--- a/src/Components/LearningCard/LearningCard.scss
+++ b/src/Components/LearningCard/LearningCard.scss
@@ -24,9 +24,12 @@
 
   .LearningCardTitles {
     padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
   }
 
-  .Title, .Subtitle, .Description, .Author {
+  .Title, .Subtitle, .Description, .By, .Author {
     @extend .Text;
   }
 
@@ -45,43 +48,42 @@
   }
 
   .Description {
-    font-weight: 400;
+    font-weight: 500;
     font-size: 0.8vw;
   }
 
-  .Author {
-    font-weight: 400;
+  .By, .Author {
+    font-weight: 500;
     font-size: 0.8vw;
+    text-decoration: underline 1px;
+    text-underline-offset: 5px;
+  }
+
+  .By {
+    text-decoration: none;
   }
 }
 
 .LearningCard-Theme_01 {
-  @extend .LearningCard;
-  border: 1px solid rgba(#3a3a3d, 1);
-  background-image: linear-gradient(-45deg, #949494, #585858);
-  .Title, .Subtitle, .Description, .Author {
+  @extend .LearningCard, .ComponentSurface-Theme_01;
+  .Title, .Subtitle, .Description, .By, .Author {
     text-shadow: 0 0 3px $dark1;
   }
 }
 
 .LearningCard-Theme_02 {
-  @extend .LearningCard;
-  border: 1px solid rgba(#969696, 1);
-  background-image: linear-gradient(-45deg, #f5f7fa, #c3cfe2);
-  .Title, .Subtitle, .Description, .Author {
+  @extend .LearningCard, .ComponentSurface-Theme_02;
+  .Title, .Subtitle, .Description, .By, .Author {
     text-shadow: 0 0 3px #c3cfe2;
     color: $dark0;
   }
 }
 
 .LearningCard-Theme_03 {
-  @extend .LearningCard;
-  border: 1px solid rgba(#c3cfe2, 1);
-  background-image: linear-gradient(-45deg, #8EC5FC, #E0C3FC);
-  .Title, .Description {
-    color: #383538;
-  }
-  .Subtitle, .Author {
-    color: #4d4e4e;
+  @extend .LearningCard, .ComponentSurface-Theme_03;
+  border: 1px solid rgba(255, 255, 255, 0.65);
+  .Title, .Subtitle, .Description, .By, .Author {
+    text-shadow: 0 0 2px #000000;
+    color: white;
   }
 }
