--- a/src/Components/PDropdownButton/PDropdownButton.scss
+++ b/src/Components/PDropdownButton/PDropdownButton.scss
@@ -31,15 +31,25 @@
 
 .PDropdownButton-Theme_01 {
   @extend .PDropdownButton;
-  background-image: linear-gradient(-45deg, #4a4e57, #5f636d);
+  background: linear-gradient(to bottom, rgb(59, 59, 61), rgba(0, 0, 0, 0.596)), radial-gradient(at top center, rgb(188, 192, 201) 0%, rgba(0, 0, 0, 0.514) 120%) #818286;
+  background-blend-mode: multiply,multiply;
+}
+.DropdownIcon-Theme_01 {
+  color: rgb(199, 201, 212);
 }
 
 .PDropdownButton-Theme_02 {
   @extend .PDropdownButton;
   background-image: linear-gradient(-45deg, #eeeef0, #c5c7ce);
 }
+.DropdownIcon-Theme_02 {
+  color: $dark0;
+}
 
 .PDropdownButton-Theme_03 {
   @extend .PDropdownButton;
   background-image: linear-gradient(-45deg, #e594f0, #5183ce);
+}
+.DropdownIcon-Theme_03 {
+  color: $dark0;
 }
