--- a/src/Utils/StyleClasses.scss
+++ b/src/Utils/StyleClasses.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import "./ColorVariables.scss";
 
 ////////////////////
@@ -128,15 +129,22 @@
 
 .ComponentSurface-Theme_03 {
   background: linear-gradient(150deg, #9647F1 -5%, #6D80EF 80%);
-  // background: linear-gradient(150deg, #4F73FA -5%, #783CFE 120%);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.20);
+  border: 1px solid rgba(#c3cfe2, 1);
+}
+.ComponentSurface-Theme_03_2 {
+  background: linear-gradient(150deg, #5a4ffa -5%, #8c45e9 120%);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.20);
   border: 1px solid rgba(255, 255, 255, 0.18);
-  border: 1px solid rgba(#c3cfe2, 1);
 }
 
 /////////////////////////
 // REUTILIZABLE STYLES //
 /////////////////////////
+
+.Titles {
+  font-family: 'Poppins' !important;
+}
 
 .Text {
   font-family: 'Montserrat' !important;
