--- a/src/Components/PDropzone/PDropzone.scss
+++ b/src/Components/PDropzone/PDropzone.scss
@@ -16,7 +16,6 @@
   }
   .inside {
     background-color: #FEB940;
-
   }
   .outside {
     background-color: #EDEFF9;
@@ -28,5 +27,12 @@
   }
   .hideImg {
     display: none;
+  }
+
+  .ErrorText {
+    @extend .Text;
+    font-weight: 700;
+    color: #e93b3b;
+    text-shadow: 0 0 3px #000000;
   }
 }
