--- a/src/Components/EventCard/EventCard.scss
+++ b/src/Components/EventCard/EventCard.scss
@@ -56,7 +56,8 @@
     text-align: left;
     border-radius: 10px;
     padding: 10px;
-    min-width: min(1000px, 50vw);
+    min-width: min(1000px, 35vw);
+    height: 142px;
     margin: 0 10px;
 
     .EventInfoContainer {
